@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2019, the original author or authors.
+ * Copyright (c) 2002-2019, the original author(s).
  *
  * This software is distributable under the BSD license. See the terms of the
  * BSD license in the documentation provided with this software.
@@ -8,20 +8,39 @@
  */
 package jdk.internal.org.jline.terminal.impl;
 
-import jdk.internal.org.jline.terminal.Attributes;
-import jdk.internal.org.jline.terminal.spi.Pty;
-import jdk.internal.org.jline.utils.NonBlockingInputStream;
-
+import java.io.FileDescriptor;
+import java.io.FilterInputStream;
 import java.io.IOError;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InterruptedIOException;
+import java.lang.reflect.Field;
 
+//import jdk.internal.org.jline.nativ.JLineLibrary;
+//import jdk.internal.org.jline.nativ.JLineNativeLoader;
+import jdk.internal.org.jline.terminal.Attributes;
+import jdk.internal.org.jline.terminal.spi.Pty;
+import jdk.internal.org.jline.terminal.spi.SystemStream;
+import jdk.internal.org.jline.terminal.spi.TerminalProvider;
+import jdk.internal.org.jline.utils.NonBlockingInputStream;
+
+import static jdk.internal.org.jline.terminal.TerminalBuilder.PROP_FILE_DESCRIPTOR_CREATION_MODE;
+import static jdk.internal.org.jline.terminal.TerminalBuilder.PROP_FILE_DESCRIPTOR_CREATION_MODE_DEFAULT;
+import static jdk.internal.org.jline.terminal.TerminalBuilder.PROP_FILE_DESCRIPTOR_CREATION_MODE_NATIVE;
+import static jdk.internal.org.jline.terminal.TerminalBuilder.PROP_FILE_DESCRIPTOR_CREATION_MODE_REFLECTION;
 import static jdk.internal.org.jline.terminal.TerminalBuilder.PROP_NON_BLOCKING_READS;
 
 public abstract class AbstractPty implements Pty {
 
+    protected final TerminalProvider provider;
+    protected final SystemStream systemStream;
     private Attributes current;
+    private boolean skipNextLf;
+
+    public AbstractPty(TerminalProvider provider, SystemStream systemStream) {
+        this.provider = provider;
+        this.systemStream = systemStream;
+    }
 
     @Override
     public void setAttr(Attributes attr) throws IOException {
@@ -32,10 +51,32 @@ public abstract class AbstractPty implements Pty {
     @Override
     public InputStream getSlaveInput() throws IOException {
         InputStream si = doGetSlaveInput();
+        InputStream nsi = new FilterInputStream(si) {
+            @Override
+            public int read() throws IOException {
+                for (; ; ) {
+                    int c = super.read();
+                    if (current.getInputFlag(Attributes.InputFlag.INORMEOL)) {
+                        if (c == '\r') {
+                            skipNextLf = true;
+                            c = '\n';
+                        } else if (c == '\n') {
+                            if (skipNextLf) {
+                                skipNextLf = false;
+                                continue;
+                            }
+                        } else {
+                            skipNextLf = false;
+                        }
+                    }
+                    return c;
+                }
+            }
+        };
         if (Boolean.parseBoolean(System.getProperty(PROP_NON_BLOCKING_READS, "true"))) {
-            return new PtyInputStream(si);
+            return new PtyInputStream(nsi);
         } else {
-            return si;
+            return nsi;
         }
     }
 
@@ -47,6 +88,16 @@ public abstract class AbstractPty implements Pty {
         if (Thread.interrupted()) {
             throw new InterruptedIOException();
         }
+    }
+
+    @Override
+    public TerminalProvider getProvider() {
+        return provider;
+    }
+
+    @Override
+    public SystemStream getSystemStream() {
+        return systemStream;
     }
 
     class PtyInputStream extends NonBlockingInputStream {
@@ -102,4 +153,103 @@ public abstract class AbstractPty implements Pty {
         }
     }
 
+    private static FileDescriptorCreator fileDescriptorCreator;
+
+    protected static FileDescriptor newDescriptor(int fd) {
+        if (fileDescriptorCreator == null) {
+            String str =
+                    System.getProperty(PROP_FILE_DESCRIPTOR_CREATION_MODE, PROP_FILE_DESCRIPTOR_CREATION_MODE_DEFAULT);
+            String[] modes = str.split(",");
+            IllegalStateException ise = new IllegalStateException("Unable to create FileDescriptor");
+            for (String mode : modes) {
+                try {
+                    switch (mode) {
+                        case PROP_FILE_DESCRIPTOR_CREATION_MODE_NATIVE:
+                            fileDescriptorCreator = null;//new NativeFileDescriptorCreator();
+                            break;
+                        case PROP_FILE_DESCRIPTOR_CREATION_MODE_REFLECTION:
+                            fileDescriptorCreator = new ReflectionFileDescriptorCreator();
+                            break;
+                    }
+                } catch (Throwable t) {
+                    // ignore
+                    ise.addSuppressed(t);
+                }
+                if (fileDescriptorCreator != null) {
+                    break;
+                }
+            }
+            if (fileDescriptorCreator == null) {
+                throw ise;
+            }
+        }
+        return fileDescriptorCreator.newDescriptor(fd);
+    }
+
+    interface FileDescriptorCreator {
+        FileDescriptor newDescriptor(int fd);
+    }
+
+    /*
+     * Class that could be used on OpenJDK 17.  However, it requires the following JVM option
+     *   --add-exports java.base/jdk.internal.access=ALL-UNNAMED
+     * so the benefit does not seem important enough to warrant the problems caused
+     * by access the jdk.internal.access package at compile time, which itself requires
+     * custom compiler options and a different maven module, or at least a different compile
+     * phase with a JDK 17 compiler.
+     * So, just keep the ReflectionFileDescriptorCreator for now.
+     *
+    static class Jdk17FileDescriptorCreator implements FileDescriptorCreator {
+        private final jdk.internal.access.JavaIOFileDescriptorAccess fdAccess;
+        Jdk17FileDescriptorCreator() {
+            fdAccess = jdk.internal.access.SharedSecrets.getJavaIOFileDescriptorAccess();
+        }
+
+        @Override
+        public FileDescriptor newDescriptor(int fd) {
+            FileDescriptor descriptor = new FileDescriptor();
+            fdAccess.set(descriptor, fd);
+            return descriptor;
+        }
+    }
+     */
+
+    /**
+     * Reflection based file descriptor creator.
+     * This requires the following option
+     *   --add-opens java.base/java.io=ALL-UNNAMED
+     */
+    static class ReflectionFileDescriptorCreator implements FileDescriptorCreator {
+        private final Field fileDescriptorField;
+
+        ReflectionFileDescriptorCreator() throws Exception {
+            Field field = FileDescriptor.class.getDeclaredField("fd");
+            field.setAccessible(true);
+            fileDescriptorField = field;
+        }
+
+        @Override
+        public FileDescriptor newDescriptor(int fd) {
+            FileDescriptor descriptor = new FileDescriptor();
+            try {
+                fileDescriptorField.set(descriptor, fd);
+            } catch (IllegalAccessException e) {
+                // This should not happen as the field has been set accessible
+                throw new IllegalStateException(e);
+            }
+            return descriptor;
+        }
+    }
+
+//    static class NativeFileDescriptorCreator implements FileDescriptorCreator {
+//        NativeFileDescriptorCreator() {
+//            // Force load the library
+//            JLineNativeLoader.initialize();
+//        }
+//
+//        @Override
+//        public FileDescriptor newDescriptor(int fd) {
+//            return JLineLibrary.newFileDescriptor(fd);
+//        }
+//    }
 }
