@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2022, Arm Limited. All rights reserved.
+ * Copyright (c) 2022, 2023, Arm Limited. All rights reserved.
+ * Copyright (c) 2025, Rivos Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,10 +27,10 @@
  * @bug 8289996
  * @summary Test range check hoisting for some scaled iv at array index
  * @library /test/lib /
- * @requires vm.debug & vm.compiler2.enabled & (os.simpleArch == "x64" | os.arch == "aarch64")
+ * @requires vm.flagless
+ * @requires vm.debug & vm.compiler2.enabled & (os.simpleArch == "x64" | os.arch == "aarch64" | os.arch == "riscv64")
  * @modules jdk.incubator.vector
- * @compile --enable-preview -source ${jdk.version} TestRangeCheckHoistingScaledIV.java
- * @run main/othervm --enable-preview compiler.rangechecks.TestRangeCheckHoistingScaledIV
+ * @run main/othervm compiler.rangechecks.TestRangeCheckHoistingScaledIV
  */
 
 package compiler.rangechecks;
@@ -82,8 +83,8 @@ public class TestRangeCheckHoistingScaledIV {
     }
 
     public static void main(String[] args) throws Exception {
-        ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(
-                "--enable-preview", "--add-modules", "jdk.incubator.vector",
+        ProcessBuilder pb = ProcessTools.createTestJavaProcessBuilder(
+                "--add-modules", "jdk.incubator.vector",
                 "-Xbatch", "-XX:+TraceLoopPredicate", Launcher.class.getName());
         OutputAnalyzer analyzer = new OutputAnalyzer(pb.start());
         analyzer.shouldHaveExitValue(0);
