@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,7 +37,6 @@ import javax.xml.transform.stream.StreamSource;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.ls.LSResourceResolver;
 import org.xml.sax.InputSource;
@@ -47,7 +46,6 @@ import org.xml.sax.SAXException;
  * @test
  * @bug 8158084 8163232 8166220
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow catalog.CatalogSupport5
  * @run testng/othervm catalog.CatalogSupport5
  * @summary extends CatalogSupport tests, verifies that when errors occur,
  * relevant checked Exceptions are returned.
@@ -60,7 +58,6 @@ import org.xml.sax.SAXException;
  *
  * @author huizhe.wang@oracle.com
  */
-@Listeners({jaxp.library.FilePolicy.class, jaxp.library.NetAccessPolicy.class})
 public class CatalogSupport5 extends CatalogSupportBase {
 
     /*
