@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,7 @@ import jdk.test.lib.jfr.Events;
 /**
  * @test
  * @summary Verifies the methods of the RecordedEvent
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.consumer.TestRecordedEvent
@@ -66,7 +66,7 @@ public class TestRecordedEvent {
             List<RecordedEvent> events = Events.fromRecording(r);
             Events.hasEvents(events);
             Asserts.assertEquals(events.size(), 1);
-            RecordedEvent event = events.get(0);
+            RecordedEvent event = events.getFirst();
 
             List<ValueDescriptor> descriptors = event.getFields();
 
