@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,10 +22,10 @@
  */
 /*
  * @test
- * @bug 4965260 8008577 8287868
+ * @bug 4965260 8008577 8287868 8174269
  * @modules jdk.localedata
  * @summary Verifies the language name of "nl" for supported locales
- * @run main/othervm -Djava.locale.providers=JRE,SPI Bug4965260
+ * @run main Bug4965260
  */
 
 import java.util.Locale;
