@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,7 +21,7 @@
  * questions.
  */
 
-/**
+/*
  * @test
  * @bug 8072480 8203814
  * @summary Check the platform classpath contains the correct elements.
@@ -31,7 +31,6 @@
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.platform
  *          jdk.compiler/com.sun.tools.javac.util
- *          jdk.jdeps/com.sun.tools.classfile
  *          jdk.jdeps/com.sun.tools.javap
  * @build toolbox.ToolBox ElementStructureTest
  * @run main ElementStructureTest
@@ -93,8 +92,7 @@ import javax.tools.StandardLocation;
 import javax.tools.ToolProvider;
 
 import com.sun.source.util.JavacTask;
-import com.sun.tools.classfile.ClassFile;
-import com.sun.tools.classfile.ConstantPoolException;
+import java.lang.classfile.ClassFile;
 import com.sun.tools.javac.api.JavacTaskImpl;
 import com.sun.tools.javac.code.Symbol.CompletionFailure;
 import com.sun.tools.javac.platform.PlatformProvider;
@@ -213,14 +211,11 @@ public class ElementStructureTest {
                         return;
                     StringBuilder targetPattern;
                     switch (line.charAt(0)) {
-                        case '+':
-                            targetPattern = acceptPattern;
-                            break;
-                        case '-':
-                            targetPattern = rejectPattern;
-                            break;
-                        default:
-                            return ;
+                        case '+' -> targetPattern = acceptPattern;
+                        case '-' -> targetPattern = rejectPattern;
+                        default -> {
+                            return;
+                        }
                     }
                     line = line.substring(1);
                     if (line.endsWith("/")) {
@@ -256,7 +251,7 @@ public class ElementStructureTest {
 
     void run(Writer output, String version) throws Exception {
         List<String> options = Arrays.asList("--release", version, "-classpath", "");
-        List<ToolBox.JavaSource> files = Arrays.asList(new ToolBox.JavaSource("Test", ""));
+        List<ToolBox.JavaSource> files = List.of(new ToolBox.JavaSource("Test", ""));
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         JavacTaskImpl task = (JavacTaskImpl) compiler.getTask(null, null, null, options, null, files);
 
@@ -288,10 +283,10 @@ public class ElementStructureTest {
                 }
                 JavaFileObject file = new ByteArrayJavaFileObject(data.toByteArray());
                 try (InputStream in = new ByteArrayInputStream(data.toByteArray())) {
-                    String name = ClassFile.read(in).getName().replace("/", ".");
+                    String name = ClassFile.of().parse(in.readAllBytes()).thisClass().name().stringValue();
                     className2File.put(name, file);
                     file2ClassName.put(file, name);
-                } catch (IOException | ConstantPoolException ex) {
+                } catch (IOException ex) {
                     throw new IllegalStateException(ex);
                 }
             }
