@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -50,16 +48,16 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
+@Fork(value = 3, jvmArgs = { "--enable-native-access=ALL-UNNAMED", "-Djava.library.path=micro/native" })
 public class StrLenTest extends CLayouts {
 
     Arena arena = Arena.ofConfined();
 
     SegmentAllocator segmentAllocator;
-    SegmentAllocator arenaAllocator = new RingAllocator(arena);
-    SlicingPool pool = new SlicingPool();
+    SegmentAllocator arenaAllocator;
+    SlicingPool pool;
 
-    @Param({"5", "20", "100"})
+    @Param({"5", "20", "100", "451"})
     public int size;
     public String str;
 
@@ -71,13 +69,15 @@ public class StrLenTest extends CLayouts {
 
     static {
         Linker abi = Linker.nativeLinker();
-        STRLEN = abi.downcallHandle(abi.defaultLookup().find("strlen").get(),
+        STRLEN = abi.downcallHandle(abi.defaultLookup().findOrThrow("strlen"),
                 FunctionDescriptor.of(C_INT, C_POINTER));
     }
 
     @Setup
     public void setup() {
         str = makeString(size);
+        arenaAllocator = new RingAllocator(arena, size + 1);
+        pool = new SlicingPool(size + 1);
         segmentAllocator = SegmentAllocator.prefixAllocator(arena.allocate(size + 1, 1));
     }
 
@@ -92,29 +92,28 @@ public class StrLenTest extends CLayouts {
     }
 
     @Benchmark
-    public int panama_strlen() throws Throwable {
+    public int panama_strlen_alloc() throws Throwable {
         try (Arena arena = Arena.ofConfined()) {
-            MemorySegment segment = arena.allocateUtf8String(str);
+            MemorySegment segment = arena.allocateFrom(str);
             return (int)STRLEN.invokeExact(segment);
         }
     }
 
     @Benchmark
     public int panama_strlen_ring() throws Throwable {
-        return (int)STRLEN.invokeExact(arenaAllocator.allocateUtf8String(str));
+        return (int)STRLEN.invokeExact(arenaAllocator.allocateFrom(str));
     }
 
     @Benchmark
     public int panama_strlen_pool() throws Throwable {
-        Arena arena = pool.acquire();
-        int l = (int) STRLEN.invokeExact(arena.allocateUtf8String(str));
-        arena.close();
-        return l;
+        try (Arena arena = pool.acquire()) {
+            return (int) STRLEN.invokeExact(arena.allocateFrom(str));
+        }
     }
 
     @Benchmark
     public int panama_strlen_prefix() throws Throwable {
-        return (int)STRLEN.invokeExact(segmentAllocator.allocateUtf8String(str));
+        return (int)STRLEN.invokeExact(segmentAllocator.allocateFrom(str));
     }
 
     @Benchmark
@@ -145,6 +144,9 @@ public class StrLenTest extends CLayouts {
                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                  mollit anim id est laborum.
                 """;
+        while (lorem.length() < size) {
+            lorem += lorem;
+        }
         return lorem.substring(0, size);
     }
 
@@ -153,8 +155,8 @@ public class StrLenTest extends CLayouts {
         SegmentAllocator current;
         long rem;
 
-        public RingAllocator(Arena session) {
-            this.segment = session.allocate(1024, 1);
+        public RingAllocator(Arena session, int size) {
+            this.segment = session.allocate(size, 1);
             reset();
         }
 
@@ -164,7 +166,7 @@ public class StrLenTest extends CLayouts {
                 reset();
             }
             MemorySegment res = current.allocate(byteSize, byteAlignment);
-            long lastOffset = segment.segmentOffset(res) + res.byteSize();
+            long lastOffset = res.address() - segment.address() + res.byteSize();
             rem = segment.byteSize() - lastOffset;
             return res;
         }
@@ -176,8 +178,12 @@ public class StrLenTest extends CLayouts {
     }
 
     static class SlicingPool {
-        final MemorySegment pool = Arena.ofAuto().allocate(1024);
+        final MemorySegment pool;
         boolean isAcquired = false;
+
+        public SlicingPool(int size) {
+            this.pool = Arena.ofAuto().allocate(size);
+        }
 
         public Arena acquire() {
             if (isAcquired) {
